# haquests

./: .gitignore  CMakeLists.txt  DIR.md  Dockerfile  FIXES.md  IMPLEMENTATION_COMPLETE.md  LICENSE  README.md  SOLUTION_SUMMARY.md  docker-compose.yml
Developer/: 00-PROJECT_OVERVIEW.md  01-RAW_SOCKET_RESEARCH.md  02-TCP_STATE_MACHINE.md  03-TLS_SSL_INTEGRATION.md  04-HTTP_PARSER_SMUGGLING.md  05-DIRECTORY_STRUCTURE.md  06-IMPLEMENTATION_ROADMAP.md  07-TESTING_STRATEGY.md  INDEX.md  README.md
_codeql_build_dir/examples/: simple_http_get  smuggling_clte  tls_connection
_codeql_build_dir/src/: libhaquests.so.0  libhaquests.so.0.1.0
docs/api/: core.md
docs/guides/: getting_started.md
docs/legal/: disclaimer.md
examples/: CMakeLists.txt  simple_http_get.cpp  smuggling_clte.cpp  tls_connection.cpp
include/haquests/: haquests.hpp
include/haquests/core/: checksum.hpp  packet.hpp  socket.hpp  types.hpp
include/haquests/http/: chunked.hpp  headers.hpp  request.hpp  response.hpp  smuggling.hpp
include/haquests/tcp/: connection.hpp  segment.hpp  state_machine.hpp  window.hpp
include/haquests/tls/: bio_adapter.hpp  certificate.hpp  connection.hpp  session.hpp
include/haquests/utils/: buffer.hpp  error.hpp  logger.hpp  network.hpp  timer.hpp
scripts/: build.sh  cleanup_firewall.sh  docker_build.sh  setup_caps.sh  setup_firewall.sh  test.sh  test_connections.sh  test_local.sh
src/: CMakeLists.txt
src/core/: checksum.cpp  packet.cpp  socket.cpp
src/http/: chunked.cpp  headers.cpp  request.cpp  response.cpp  smuggling.cpp
src/tcp/: connection.cpp  segment.cpp  state_machine.cpp  window.cpp
src/tls/: bio_adapter.cpp  certificate.cpp  connection.cpp  session.cpp
src/utils/: buffer.cpp  error.cpp  logger.cpp  network.cpp  timer.cpp
tests/: CMakeLists.txt
tests/unit/: test_checksum.cpp  test_http_parser.cpp
tools/: CMakeLists.txt
